# cas-dl-compvis-exercises-hs2024

./: Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/00_env_check/: env_check.ipynb
notebooks/00_env_check/00_env_check/: env_check.ipynb
notebooks/01_pytorch_and_images/: pytorch_and_images.ipynb
notebooks/02_mlp_and_images/: mlp_and_images.ipynb
notebooks/03_cnns/: cnns.ipynb
notebooks/04_classification_practical/: classification_practical.ipynb
notebooks/05_foundation_models/: foundation_models.ipynb
src/dl_cv_lectures/: visualize.py
src/dl_cv_lectures/data/: cats_vs_dogs (# Name clash 2024-10-19 ufnm1nC #).py  concrete_cracks.py  eurosat.py  scene_classification.py  utils (# Name clash 2024-10-19 xopo0nC #).py
